         debugger.c,gtkjoystick.c,gtkui.c,pokefinder.c,stock.c},widget/query.c,
         win32/win32ui.c}: add and use ARRAY_SIZE macro (Stuart).
20150302 display.c,event.c,machine.c,memory.c,periph.c,rectangle.c,sound.c: use
         libspectrum_{new,new0,renew}() macros where sizeof(elem) > 1 (Stuart).
20150302 fuse.c,memory.c,peripherals/disk/disk.c,rzx.c,settings.pl,slt.c,tape.c,
         ui/widget/text.c,utils.c: use libspectrum_{new,new0,renew}() macros
         where sizeof(elem) == 1 (Stuart).
20150303 debugger/{commandy.y,expression.c},mempool.[ch],unittests/unittests.c:
         rename mempool_alloc() to mempool_malloc() to match libspectrum and
         GLib (Stuart).
20150303 debugger/commandy.y,debugger/expression.c,mempool.[ch],
         unittests/unittests.c: add and use mempool_new() macro (Stuart).
20150303 peripherals/disk/{fdd.[ch],upd_fdc.c,wd_fdc.c}: use separate functions
         for reading and writing (Stuart).
20150303 peripherals/nic/w5100_internals.h,ui/ui.h: add missing GCC_PRINTF
         annotations (Stuart).
20150303 peripherals/nic/w5100_socket.c: fix segfault in error handling when
         setting SO_REUSEADDR (Stuart).
20150314 compat/{unix/socket.c,win32/socket.c},debugger/{breakpoint.c,
         expression.c},machine.c,peripherals/{if1.c,if2.c,disk/{beta.c,opus.c,
         plusd.c,upd_fdc.c,wd_fdc.c},flash/am29f010.c,ide/{divide.c,zxatasp.c,
         zxcf.c},nic/{enc28j60.c,w5100.c},scld.c,spectranet.c},
         pokefinder/pokemem.c,sound/sdlsound.c,ui/uijoystick.c: switch to using
         libspectrum_new over raw malloc (Sergio).
20150315 compat/{unix/socket.c,win32/socket.c},debugger/{breakpoint.c,
         expression.c},machine.c,peripherals/{disk/{beta.c,disk.c,opus.c,
         plusd.c,upd_fdc.c,wd_fdc.c},flash/am29f010.c,ide/{divide.c,zxatasp.c,
         zxcf.c},if1.c,if2.c,nic/{enc28j60.c,w5100.c},scld.c,spectranet.c},
         slt.c: remove unneeded "out of memory" error handling (Sergio).